Stop y overflow

--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,5 @@
   height: 100vh;
   width: 100vw;
   background-color: rgb(23 23 23);
+  overflow-y: none;
 }
